// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModifierExpression can count courses 1`] = `
{
  "$children": "$all",
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "course",
}
`;

exports[`ModifierExpression can count credits 1`] = `
{
  "$children": "$all",
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "credit",
}
`;

exports[`ModifierExpression can count departments 1`] = `
{
  "$children": "$all",
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "department",
}
`;

exports[`ModifierExpression can count from a where-statement 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "where",
  "$type": "modifier",
  "$what": "course",
  "$where": {
    "$key": "a",
    "$operator": "$eq",
    "$type": "qualification",
    "$value": "b",
  },
}
`;

exports[`ModifierExpression can count from a where-statement, with the input filtered by all children 1`] = `
{
  "$children": "$all",
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "children-where",
  "$type": "modifier",
  "$what": "course",
  "$where": {
    "$key": "a",
    "$operator": "$eq",
    "$type": "qualification",
    "$value": "b",
  },
}
`;

exports[`ModifierExpression can count from a where-statement, with the input filtered by some children 1`] = `
{
  "$children": [
    {
      "$requirement": "A",
      "$type": "reference",
    },
    {
      "$requirement": "B",
      "$type": "reference",
    },
  ],
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "children-where",
  "$type": "modifier",
  "$what": "course",
  "$where": {
    "$key": "a",
    "$operator": "$eq",
    "$type": "qualification",
    "$value": "b",
  },
}
`;

exports[`ModifierExpression can count from children 1`] = `
{
  "$children": "$all",
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "course",
}
`;

exports[`ModifierExpression can count from filter 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "filter",
  "$type": "modifier",
  "$what": "course",
}
`;

exports[`ModifierExpression can count from filter, then apply a where-clause 1`] = `
{
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "filter-where",
  "$type": "modifier",
  "$what": "course",
  "$where": {
    "$key": "a",
    "$operator": "$eq",
    "$type": "qualification",
    "$value": "b",
  },
}
`;

exports[`ModifierExpression can count from specified children 1`] = `
{
  "$children": [
    {
      "$requirement": "A",
      "$type": "reference",
    },
    {
      "$requirement": "B",
      "$type": "reference",
    },
  ],
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "course",
}
`;

exports[`ModifierExpression can count from specified children 2`] = `
{
  "$children": [
    {
      "$requirement": "Bible",
      "$type": "reference",
    },
    {
      "$requirement": "B",
      "$type": "reference",
    },
  ],
  "$count": {
    "$num": 1,
    "$operator": "$gte",
  },
  "$from": "children",
  "$type": "modifier",
  "$what": "course",
}
`;
